feat: allow calculation of multiple recipes
